# react-native-sodium

./: package.json  precompiled.tgz  react-native-sodium-0.3.4.tgz
android/: CMakeLists.txt  build.gradle
android/src/main/java/org/libsodium/jni/: Sodium.java  SodiumJNI.java
android/src/main/java/org/libsodium/rn/: RCTSodiumModule.java
cpp/: sodium-binding.cpp  sodium-binding.h
